# customer-360

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
src/: __init__.py  main.py
src/analytics/: __init__.py  clv.py  cohort.py  rfm.py  segmentation.py
src/dashboard/: __init__.py  app.py
src/data/: __init__.py  generator.py  loader.py  quality.py
src/resolution/: __init__.py  matcher.py  merger.py  quality.py
src/utils/: __init__.py  config.py  database.py  logger.py
tests/: test_clv.py  test_cohort.py  test_config.py  test_dashboard.py  test_database.py  test_generator.py  test_loader.py  test_logger.py  test_matcher.py  test_merger.py  test_pipeline.py  test_quality.py  test_rfm.py  test_segmentation.py  test_web_support.py
